--- a/ui/rsc-ui/style/style.css
+++ b/ui/rsc-ui/style/style.css
@@ -1,16 +1,17 @@
 AnthemUi {
-  background-color: #27272B;
+  background: #27272B;
   min-width: 1020px;
   max-width: 1020px;
   min-height: 680px;
-  max-height: 680px; }
+  max-height: 680px;
+  font-family: "DIN"; }
 
 AlgorithmUi {
-  background-color: transparent;
+  background: transparent;
   border: 2px solid #27272B;
   outline: none; }
   AlgorithmUi QLabel {
-    background-color: #DC4850;
+    background: #DC4850;
     color: #27272B;
     font-size: 20px;
     font-family: DIN;
@@ -20,7 +21,7 @@ AlgorithmUi {
     min-height: 30px;
     max-height: 30px; }
     AlgorithmUi QLabel:enabled {
-      background-color: #27272B;
+      background: #27272B;
       color: #DC4850; }
 
 CustomComboBox QMenu {
@@ -29,7 +30,7 @@ CustomComboBox QMenu {
     padding: 40px; }
 
 CustomDial, ModDial {
-  background-color: transparent;
+  background: transparent;
   font-family: "DIN";
   color: #27272B;
   qproperty-arcColor: #27272B;
@@ -41,7 +42,7 @@ CustomMessageBox QLabel {
   font-size: 30px; }
 
 IconButton {
-  background-color: none;
+  background: none;
   outline: none;
   border: none; }
 
@@ -54,12 +55,12 @@ Menubar {
     min-height: 54px;
     max-width: 54px;
     max-height: 54px;
-    background-color: #27272B;
+    background: #27272B;
     font-size: 30px;
     font-family: DIN;
     color: #DC4850; }
     Menubar #CopyDock:enabled {
-      background-color: #DC4850;
+      background: #DC4850;
       color: #27272B; }
   Menubar IconButton {
     border: 3px solid #DC4850;
@@ -75,7 +76,7 @@ Menubar {
     max-width: 60px;
     max-height: 60px; }
   Menubar Projectbar {
-    background-color: #DC4850;
+    background: #DC4850;
     min-width: 500px;
     max-width: 500px; }
 
@@ -95,7 +96,7 @@ ModDial {
   min-height: 120; }
 
 ModItemUi {
-  background-color: #DC4850;
+  background: #DC4850;
   qproperty-borderColor: #27272B;
   qproperty-borderWidth: 4;
   color: #27272B;
@@ -107,30 +108,32 @@ ModItemUi {
     padding-right: 30px; }
 
 MasterPage {
-  background-color: #DC4850; }
+  background: #DC4850; }
   MasterPage ModDial {
     font-size: 16px; }
 
 OperatorPage {
-  background-color: #DC4850; }
+  background: #DC4850; }
   OperatorPage QTabBar::tab {
     min-width: 250px;
     min-height: 40px;
     padding-top: 10px;
-    font-size: 30px;
-    margin: 0px; }
+    font-size: 30px; }
 
 OperatorUi, PanUi, MacroUi, #VolumeUi {
-  border: 2px solid #27272B; }
+  border: 2px solid #27272B;
+  min-width: 480px;
+  min-height: 220px; }
   OperatorUi QPushButton, PanUi QPushButton, MacroUi QPushButton, #VolumeUi QPushButton {
     font-size: 20px;
     border-top: 0px solid #27272B;
     border-bottom: 2px solid #27272B;
     border-right: 1px solid #27272B;
     border-left: 1px solid #27272B;
-    min-width: 40px; }
+    min-width: 40px;
+    min-height: 32px; }
     OperatorUi QPushButton:open, PanUi QPushButton:open, MacroUi QPushButton:open, #VolumeUi QPushButton:open {
-      background-color: #27272B;
+      background: #27272B;
       color: #DC4850; }
 
 PanUi, MacroUi, #VolumeUi {
@@ -175,40 +178,52 @@ QLabel {
   color: #F7FDFA; }
 
 QMenu {
-  background-color: #DC4850;
+  background: #DC4850;
   margin: 15px; }
   QMenu::item {
     color: #27272B;
     padding: 15px;
     font-size: 16px; }
     QMenu::item::selected {
-      background-color: #27272B;
+      background: #27272B;
       color: #DC4850; }
     QMenu::item::checked {
-      background-color: #27272B;
+      background: #27272B;
       color: #DC4850;
       padding-left: 30px; }
 
 QDialog, SettingsDialog {
-  background-color: #DC4850; }
+  background: #DC4850; }
   QDialog QPushButton, SettingsDialog QPushButton {
     font-size: 18px;
     font-family: "Proxima Nova";
     border: 1px solid #27272B;
     min-height: 50px; }
     QDialog QPushButton:hover, SettingsDialog QPushButton:hover {
-      background-color: #27272B;
+      background: #27272B;
       color: #DC4850; }
 
 QLineEdit {
   font-size: 30px;
   border: none;
   qproperty-frame: false;
-  background-color: #DC4850;
+  background: #DC4850;
   color: #27272B; }
 
+QListView {
+  background: transparent;
+  color: #27272B;
+  font-size: 16px;
+  border: 2px solid #27272B; }
+  QListView::item {
+    padding: 10px; }
+    QListView::item::selected {
+      padding: 0px;
+      background: #27272B;
+      color: #DC4850; }
+
 QComboBox {
-  background-color: transparent;
+  background: transparent;
   color: #27272B;
   font-size: 20px;
   font-family: "Proxima Nova";
@@ -218,7 +233,7 @@ QComboBox {
   QComboBox::drop-down {
     border: none; }
   QComboBox:hover {
-    background-color: #27272B;
+    background: #27272B;
     color: #DC4850; }
   QComboBox QListView {
     background: #DC4850;
@@ -226,23 +241,33 @@ QComboBox {
 
 QPushButton {
   outline: none;
-  background-color: transparent;
+  background: transparent;
   border: none;
   color: #27272B;
   font-family: "DIN";
   qproperty-flat: true; }
 
+QScrollBar {
+  background: transparent;
+  border-left: 2px solid #27272B;
+  width: 10px; }
+  QScrollBar::handle {
+    background: #27272B; }
+  QScrollBar:add-line, QScrollBar:sub-line {
+    border: none;
+    background: none; }
+
 QTabWidget {
   min-width: 1020px; }
   QTabWidget::pane {
-    background-color: transparent;
+    background: transparent;
     margin: 0px;
     padding: 0px;
     max-height: 0px;
     max-width: 0px;
     border-width: 0px; }
   QTabWidget QTabBar::tab {
-    background-color: #27272B;
+    background: #27272B;
     font-size: 30px;
     color: #F7FDFA;
     font-family: "DIN Light";
@@ -258,7 +283,7 @@ QTabWidget {
     text-align: center;
     qproperty-alignment: AlignCenter; }
     QTabWidget QTabBar::tab:selected, QTabWidget QTabBar::tab:hover {
-      background-color: #DC4850;
+      background: #DC4850;
       color: #27272B; }
 
 RecordUi {
@@ -268,7 +293,7 @@ RecordUi {
     min-height: 100px;
     max-height: 100px; }
     RecordUi QPushButton:open {
-      background-color: #27272B;
+      background: #27272B;
       color: #DC4850; }
   RecordUi QLineEdit {
     padding-left: 20px;
@@ -276,14 +301,13 @@ RecordUi {
     font-size: 24px;
     border: none;
     qproperty-frame: false;
-    background-color: transparent;
+    background: transparent;
     color: #27272B; }
 
 #SecondaryOperatorUi CustomDial, #SecondaryOperatorUi ModDial {
   font-size: 16px;
-  qproperty-valueShown: false;
-  min-width: 16px;
-  min-height: 16px; }
+  min-width: 100px;
+  max-width: 100px; }
 #SecondaryOperatorUi QPushButton {
   font-size: 16px;
   border: 2px solid #27272B; }
@@ -292,5 +316,9 @@ SettingsDialog QLabel {
   color: #27272B;
   font-family: "Proxima Nova";
   font-size: 20px; }
+
+WavetableUi {
+  color: #27272B;
+  background-color: #DC4850; }
 
 /*# sourceMappingURL=style.css.map */
