--- a/ui/rsc-ui/style/style.sass
+++ b/ui/rsc-ui/style/style.sass
@@ -373,6 +373,13 @@ QTabWidget
             background: $first
             color: $second
 
+QToolTip
+    background: $first
+    font-family: "DIN"
+    color: $second
+    font-size: 16px
+    padding: 2px
+
 QTreeView
     background: $first
     font-size: 14px
@@ -410,11 +417,12 @@ SettingsDialog
         font-size: 20px
 
 WavetableUi
-    qproperty-lineColor: $first
+    qproperty-lineColor: $fourth
     qproperty-backgroundColor: $second
     qproperty-lineWidth: 2
     qproperty-gridShown: true
     qproperty-gridWidth: 1
     qproperty-gridColor: $gray
-    qproperty-zeroColor: $gold
+    qproperty-zeroColor: $first
     qproperty-zeroWidth: 1
+    qproperty-margin: 15
